[package]
name = "komoju-datadog"
version = "0.1.1"
edition = "2024"
description = "Opinionated DataDog instrumentation toolkit"
license-file = "LICENSE"
repository = "https://github.com/komoju/komoju-datadog"

[features]
default = []
aws_ecs = ["dep:serde_json"]
axum = ["dep:axum", "dep:pin-project-lite", "dep:futures-util", "dep:tower"]
sqlx = ["dep:sqlx-datadog"]

[dependencies]
bon = "3"
datadog-formatting-layer = "6"
dogstatsd = "0.12"
http = "1"
itertools = "0.14"
opentelemetry = "0.31"
opentelemetry-datadog = { version = "0.18", features = ["reqwest-blocking-client"] }
opentelemetry_sdk = "0.31"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
tracing = "0.1"
tracing-opentelemetry = "0.31"
tracing-opentelemetry-instrumentation-sdk = { version = "0.30", features = ["http"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "parking_lot"] }

# AWS ECS support
serde_json = { version = "1", optional = true }

# Axum support
axum = { version = "0.8", optional = true }
futures-util = { version = "0.3", optional = true }
pin-project-lite = { version = "0.2", optional = true }
tower = { version = "0.5", features = ["util"], optional = true }

# SQLx support
sqlx-datadog = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }
