[package]
name = "komoju-datadog"
version = "0.5.1"
edition = "2024"
description = "Opinionated Datadog instrumentation toolkit"
license = "MIT"
repository = "https://github.com/komoju/komoju-datadog"
rust-version = "1.86"

[features]
default = []
ahash = ["tracing-datadog/ahash"]
aws_ecs = ["dep:serde_json"]
gcp_gke = []
axum = ["dep:axum", "dep:pin-project-lite", "dep:futures-util", "dep:tower"]
sqlx = ["dep:sqlx-datadog"]

[dependencies]
dogstatsd = "0.12"
http = "1"
itertools = "0.14"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
tracing = "0.1"
tracing-datadog = { version = "0.5", features = ["http"] }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "parking_lot",
] }
url = "2"

# AWS ECS support
serde_json = { version = "1", optional = true }

# Axum support
axum = { version = "0.8", optional = true }
futures-util = { version = "0.3", optional = true }
pin-project-lite = { version = "0.2", optional = true }
tower = { version = "0.5", features = ["util"], optional = true }

# SQLx support
sqlx-datadog = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }
